modified team info/fixed text align

--- a/src/widgets/style/Common.css
+++ b/src/widgets/style/Common.css
@@ -5,7 +5,7 @@
 .article::-webkit-scrollbar {display: none;}
 
 .article-title {font-size: 3rem;}
-.article-content {max-width: 69rem !important;}
+.article-content {max-width: 80rem !important; text-align: justify;}
 
 .article-subtitle {font-size: 2.3rem !important;}
 .article-image {width: 40%;}
